add dev tools state mgmt
